--- a/Midgard/appsettings.json
+++ b/Midgard/appsettings.json
@@ -19,6 +19,26 @@
     "Name": "Midgard"
   }, 
   "General": {
-    "Initialized": false 
+    "Initialized": false
+  }, 
+  "Yggdrasil": {
+    "ServerName": "Midgard",
+    "Owner": "Admin",
+    "Contact": "i@example.com",
+    "SkinDomains": [
+      "*.example.com"
+    ],
+    "Pages": {
+      "Homepage": "https://auth.example.com", 
+      "Register": "https://auth.example.com/#/register", 
+      "Manage": "https://auth.example.com/#/me"
+    }, 
+    "Security": {
+      "MaxTryTimes": 5,
+      "TokenExpireDays": 30
+    }, 
+    "Features": {
+      "NonEmailLogin": true
+    }
   }
 }
