:sparkles: Yggdrasil api
Signed-off-by: 秋雨落 <i@rain.cx>

--- a/Midgard/appsettings.json
+++ b/Midgard/appsettings.json
@@ -18,15 +18,12 @@
     "Password": "mysql password", 
     "Name": "Midgard"
   }, 
-  "General": {
-    "Initialized": false
-  }, 
   "Yggdrasil": {
     "ServerName": "Midgard",
     "Owner": "Admin",
     "Contact": "i@example.com",
     "SkinDomains": [
-      "*.example.com"
+      ".example.com"
     ],
     "Pages": {
       "Homepage": "https://auth.example.com", 
@@ -39,6 +36,9 @@
     }, 
     "Features": {
       "NonEmailLogin": true
+    }, 
+    "Sessions": {
+      "ExpireTime": 60
     }
   }
 }
