:bug: 小呀小bug，怎么修都不嫌多（
Signed-off-by: 秋雨落 <i@rain.cx>

--- a/Midgard/appsettings.json
+++ b/Midgard/appsettings.json
@@ -40,5 +40,13 @@
     "Sessions": {
       "ExpireTime": 60
     }
+  }, 
+  "General": {
+    "Security": {
+      "Recaptcha": {
+        "SiteKey": "Your site key here",
+        "SecretKey": "Your secret key here"
+      }
+    }
   }
 }
