--- a/Midgard/Midgard.csproj
+++ b/Midgard/Midgard.csproj
@@ -5,16 +5,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BouncyCastle" Version="1.8.6.1" />
+        <PackageReference Include="BouncyCastle.NetCore" Version="1.8.8" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.0" />
         <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
+        <PackageReference Include="reCAPTCHA.AspNetCore" Version="3.0.10" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Models\Api" />
       <Folder Include="ViewModels\Api" />
     </ItemGroup>
 
