:sparkles: Yggdrasil works！
Signed-off-by: 秋雨落 <i@rain.cx>

--- a/Midgard/appsettings.json
+++ b/Midgard/appsettings.json
@@ -47,6 +47,7 @@
         "SiteKey": "Your site key here",
         "SecretKey": "Your secret key here"
       }
-    }
+    },
+    "MaxProfileCount": 2
   }
 }
