:art: 更新数据库结构，皮肤上传做了一半
Signed-off-by: 秋雨落 <i@rain.cx>

--- a/Midgard/appsettings.json
+++ b/Midgard/appsettings.json
@@ -35,7 +35,8 @@
       "TokenExpireDays": 30
     }, 
     "Features": {
-      "NonEmailLogin": true
+      "NonEmailLogin": true,
+      "OfflineUuid": false
     }, 
     "Sessions": {
       "ExpireTime": 60
@@ -46,8 +47,10 @@
       "Recaptcha": {
         "SiteKey": "Your site key here",
         "SecretKey": "Your secret key here"
-      }
+      },
+      "MaxFileLength": 2097152
     },
-    "MaxProfileCount": 2
+    "MaxProfileCount": 2,
+    "SkinSaveDomain": "localhost"
   }
 }
