--- a/Midgard/appsettings.json
+++ b/Midgard/appsettings.json
@@ -51,6 +51,6 @@
       "MaxFileLength": 2097152
     },
     "MaxProfileCount": 2,
-    "SkinSaveDomain": "localhost"
+    "SkinSaveDomain": "http://localhost"
   }
 }
