--- a/Midgard/Midgard.csproj
+++ b/Midgard/Midgard.csproj
@@ -12,10 +12,12 @@
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
         <PackageReference Include="reCAPTCHA.AspNetCore" Version="3.0.10" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="ViewModels\Api" />
+      <Folder Include="wwwroot\skins" />
     </ItemGroup>
 
 </Project>
